--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "@blitzjs/auth": "2.0.0-beta.4",
     "@blitzjs/next": "2.0.0-beta.4",
     "@blitzjs/rpc": "2.0.0-beta.4",
+    "@date-io/date-fns": "2.16.0",
     "@prisma/client": "4.0.0",
+    "aws-sdk": "2.1230.0",
+    "axios": "1.1.2",
     "blitz": "2.0.0-beta.4",
+    "date-fns": "2.29.3",
+    "final-form": "4.20.7",
     "next": "12.2.5",
     "prisma": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "3.17.3",
-    "final-form": "4.20.7",
-    "react-final-form": "6.5.9"
+    "react-final-form": "6.5.9",
+    "zod": "3.17.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.0.8",
