--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "@blitzjs/next": "2.0.0-beta.4",
     "@blitzjs/rpc": "2.0.0-beta.4",
     "@date-io/date-fns": "2.16.0",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
+    "@fontsource/roboto": "4.5.8",
+    "@mui/icons-material": "5.10.9",
+    "@mui/material": "5.10.9",
     "@prisma/client": "4.0.0",
     "aws-sdk": "2.1230.0",
     "axios": "1.1.2",
