--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "aws-sdk": "2.1230.0",
     "axios": "1.1.2",
     "blitz": "2.0.0-beta.4",
+    "chance": "1.1.9",
     "date-fns": "2.29.3",
     "final-form": "4.20.7",
     "next": "12.2.5",
@@ -47,6 +48,7 @@
     "zod": "3.17.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.6.0",
     "@next/bundle-analyzer": "12.0.8",
     "@testing-library/jest-dom": "5.16.3",
     "@types/jest": "27.4.1",
